Fixed header nav items not aligned on big display

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -214,6 +214,7 @@ footer{
 
     header ul{
         display: flex;
+        align-items: center;
     }
 
     header nav a{
